test_suite/tests/compile_fail/unsupported_export_types.rs
use ronky::Exported;

#[derive(Exported)]
union Test {
    example: u8,
}

fn main() {}
