test_suite/tests/compile_fail/unsupported_export_types.stderr
error: Only named structs, tuple structs with one field, or enums are exportable
 --> tests/compile_fail/unsupported_export_types.rs:4:1
  |
4 | union Test {
  | ^^^^^
